2010-01-06  Daniel Macks  <dmacks@netspace.org>

	* all: update copyright

2009-11-24  Augusto Devegili  <monipol@users.sourceforge.net>

	* fink.conf.5.in: New MaxBuildJobs option and minor cleanup

2009-09-27  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.29.10, a bug-fix
	release on branch_0_29 which recognizes OS X 10.6.1

2009-09-26  Augusto Devegili <monipol@users.sourceforge.net>

	* fink.8.in: fink list -m,-s do not accept regular expressions
	(backport from HEAD)

2009-08-27  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.29.9, a release
	on branch_0_29 which recognizes OS X 10.6.0 and allows crude
	updating

2009-08-13  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.29.8, a bug-fix
	release on branch_0_29 which recognizes OS X 10.5.8

2009-06-10  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.29.7, a bug-fix
	release on branch_0_29

2009-05-20  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.29.6, a bug-fix
	release on branch_0_29

2009-05-16  Dave Morrison  <drm@finkproject.org>

	* inject.pl: must pass arguments when reexecuting under sudo

2009-05-15  Dave Morrison  <drm@finkproject.org>

	* setup.sh: apt-get-lockwait now specifies the full path to the
	apt-get executable (but, as before, dpkg-lockwait does NOT... this
	is important for bootstrapping)
	* bootstrap, Release, MANIFEST: install the initial Release and 
	Packages.gz files during bootstrapping
	* inject.pl: run under sudo
	* inject.pl: use $0

2009-05-13  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.29.5, a bug-fix
	release on branch_0_29

2009-05-12  Dave Morrison  <drm@finkproject.org>

	* bootstrap: provide VERSION file for a bootstrapped fink installation
	* bootstrap: actually, when bootstrapping, the VERSION file should
	say "bootstrap"