@@ -1,3 +1,7 @@
+2010-01-15  David Fang  <fangism@users.sourceforge.net>
+
+	* PkgVersion.pm: compiler_wrapper finds %p/bin for ccache-default
+
 2010-01-06  Daniel Macks  <dmacks@netspace.org>
 
 	* all: update copyright
